<resources>
    <string name="app_name">Aplikasi Wisata Ambarawa</string>

    <string name="kuliner">KULINER</string>
    <string name="tentang">tentang</string>
    <string name="keluar">keluar</string>
    <string name="wisata">wisata</string>
    <string name="wisataambarawa">Wisata Ambarawa</string>
    <string name="tahuu">Tahu Serasi Bendungan</string>
    <string name="kopi"> Eva Coffee House</string>
    <string name="serabi">Serabi Ngampin</string>
    <string name="pecel">Pecel Mbok Kami</string>
    <string name="palagan">Museum Palagan Ambarawa</string>
    <string name="kereta"> Museum Kereta Api Ambarawa</string>
    <string name="airterjun"> Air Terjun Semirang</string>
    <string name="rawa"> Rawa Pening Ambarawa</string>
    <string name="bunga">Taman Bunga Celosia</string>
    <string name="alun">Alun Alun Ambarawa</string>
    <string name="eling">Eling Bening</string>
    <string name="umbul">Umbul Sido Mukti</string>
    <string name="goa">Goa Rong View</string>
    <string name="pelangi">Kampung Pelangi Bejalen</string>
    <string name="gua"> Goa Maria Kerep</string>
    <string name="lereng">Lereng Kelir</string>
    <string name="benteng">Benteng Pendem Ambarawa</string>
    <string name="lokasi">Navigasi</string>
    <string name="txt4">Pecel Mbok Kami sebenarnya sederhana saja, tak beda dari pecel-pecel yang lain. Dalam satu porsi terdiri dari nasi, sedikit mie goreng, dan aneka sayuran yang kemudian disiram dengan sambal kacang yang rasanya manis-gurih. Yang membedakan adalah kualitas sambal kacangnya yang sudah membuat banyak orang kesengsem. Barangkali ini yang namanya “beda tangan, beda rasanya”. Meski bumbu sambal kacang yang digunakan sama dengan yang lain, tapi tetap ada citarasa yang khas disana. Menariknya lagi, kamu bisa memilih berbagai lauk tambahan mulai dari bakwan, mendoan, tahu, sate usus, sate telur puyuh, sate kerang hingga martabak.</string>
    <string name="txt3">Rumah kopi merupakan bisnis keluarga masyarakat asli Ambarawa sejak 1956. Perkebunan kopi dengan lahan seluas 4 hektar ini mempunyai warung kopi di bagian belakang. Merek dagangannya bernama Kopi Eva. Kopinya dijual dalam bentuk bijih kopi, sirup kopi, atau bubuk kopi</string>
    <string name="tentang_txt">Aplikasi ini adalah berkaitan dengan Informasi Wisata Ambarawa, Jawa Tengah. Kota ini berada di Provinsi Jawa Tengah yang memiliki wisata sejarah atau wisata alam dan kuliner yang begitu banyak. Dalam penulisan ilmiah ini untuk membuat aplikasi berbasis android mengenai pengenalan wisata di kota Ambarawa </string>
    <string name="txt1">Serabi ngampin adalah salah satu makanan khas kota ini. Sangat banyak dijumpai penjual serabi ngampin sepanjang Jalan Protokol Ambarawa-Magelang. Biasanya serabi ini tak dijual sendirian melainkan bersama jajanan lainnya yang berupa peyek kacang, kerupuk opak, dan jenang ngampin. Serabi ngampin ini rasanya enak dan juga aman dikonsumsi karena tak ada bahan pemanis atau pewarna buatan yang dicampur ke dalamnya.</string>
    <string name="txt2">Makanan khas dari Bandungan, Ambarawa, ini memiliki tekstur padat, warna putih, dan rasa yang gurih. Selain kuliner tahu, ada juga sari kedelai dengan rasa nikmat dan manis. Oh, ya, tempat ini merupakan sentra atau pusat dari pengrajin tahu. Tahu ini tanpa bahan pengawet dan aman untuk dikonsumsi. Tahu serasi paling enak disantap dengan digoreng lebih dahulu. Apabila ingin menikmati tahu ini di lokasi, maka akan ditambahkan dengan sambal kecap bercampur irisan cabai serta bawang goreng. Dengan minumannya yaitu sari kedelai yang bisa dipesan dalam keadaan dingin atau hangat. Alamat : Jalan Raya Bandungan-Sumowono.</string>
    <string name="wisata1">Museum Palagan Ambarawa dikenal juga dengan sebutan Monumen Palagan Ambarawa. Ini adalah obyek wisata yang namanya sudah terkenal sampai ke luar Kota Ambarawa. Di sini merupakan lokasi terjadinya peperangan atau pertempuran dahsyat ketika melawan Jepang yang berlangsung pada tahun 1945. Di Museum ini dapat kita jumpai beraneka ragam koleksi benda bersejarah khususnya alat transportasi yang berupa kereta api. Alamat : Jalan Mgr. Sugiyopranoto.</string>
    <string name="wisata2">Di Museum Kereta Api Ambarawa kita dapat melihat koleksi-koleksi lokomotif kereta api beserta peralatan komunikasi kuno sebagai pendukungnya. Di museum ini kita juga bisa naik kereta wisata yang melayani rute Ambarawa-Bedono pp serta Ambarawa-Tuntang pp. Kereta api rute Ambarawa-Bedono akan melewati rel bergerigi. Di Indonesia, rel bergerigi hanya bisa dijumpai di Ambarawa serta Sawahlunto</string>
    <string name="wisata3">Curug Semirang atau yang lebih akrab dengan istilah air terjun Semirang merupakan wahana wisata air terjun yang ada di kawasan perhutani, dilereng Gunung Ungaran. Tepatnya di dusun Gitungan, desa Gogik, Kecamatan Ungaran Barat. Kawasan wahana wisata curug Semirang ini merupakan wahana wisata yang pengelolaannya di kelola oleh perhutani bekerja sama dengan desa Gogik..</string>
    <string name="wisata4">Ambarawa cukup identik dengan Rawa Pening. Rawa Pening merupakan sebuah danau wisata yang memiliki luas sekitar 2.670 hektare. Danau ini terletak di antara 4 kecamatan di kabupaten Semarang yakni Ambarawa, Bawen, Tuntang, dan Banyubiru. Sebagian besar permukaan danau Rawa Pening ini tertutupi oleh tanaman enceng gondok. Awalnya, tanaman tersebut dianggap sangat mengganggu. Namun, akhirnya tanaman tersebut difungsikan sebagai bahan untuk membuat kerajinan tangan sehingga keberadaannya tak melulu sebagai parasit. Untuk menuju ke tengah danau kita bisa menyewa perahu motor yang disewakan disana.</string>
    <string name="wisata5">Tempat wisata ini menyajikan panorama bunga Celosia dengan suasana yang sangat sejuk khas pegunungan, karena memang kawasan wisata ini berada di lereng gunung Ungaran, jadi meskipun datang di siang bolong tetap saja kamu tidak akan merasa kepanasan. Taman Bunga Celosia sendiri dilengkapi beberapa spot foto keren seperti halnya kincir angin khas negeri Belanda, patung Merlion khas Singapura, rumah Hobbit atau rumah kurcaci, patung jamur, spot foto symbol hati dan masih banyak lainnya.</string>
    <string name="wisata6">Benteng Pendem adalah sebutan populer wisatawan bagi sebuah bangunan tua bernama Fort Willem I. Lokasinya tidak terlalu jauh dari Museum Kereta Api Ambarawa. Patokannya jika kalian ingin berkunjung ke sini, posisinya di belakang RSUD Ambarawa. Lokasi ini memang eksentrik karena menyimpan sejarah yang panjang. Karena keunikannya itulah Benteng Pendem pernah digunakan sebagai lokasi syuting film Soekarno. </string>
    <string name="wisata7">Alun alun ini berada di Jl. Ambarawa-Tambak boyo, Busungan, Tambakboyo, Ambarawa, Semarang, Jawa Tengah. Alun alun ini berada disamping perempatan Tambak boyo yang menghubungkan arah Tuntang, Bawen, Ambarawa-Kota dan Ambarawa-Banyubiru, sehingga menjadi lokasi yang sangat strategis. Bangunan yang berada di kompleks ini dipindahkan, seperti Es Degan yang dulu disekitar area Alun alun, kini berada didepan Alun alun.</string>
    <string name="wisata8">Objek wisata Kabupaten Semarang semakin banyak referensi nya, sehingga wisatawan semakin mudah dalam menentukan destinasi wisata di Jawa Tengah. Satu diantara tempat rekreasi Semarang sedang populer dikalangan pecinta alam sekaligus kuliner maka tidak asing lagi wisata Eling Bening Semarang yang sebenarnya merupakan restoran mengusungkan konsep alam serta menawarkan background foto instagenic. Lokasi wisata di dataran tinggi membuat hawa sekitar terasa sejuk terutama ketika pagi hari atau sore hari. Setiap harinya Objek wisata Ambarawa ini tak pernah sepi pengunjung, terutama para anak muda kekinian yang memiliki hobi hunting keindahan alam sebagai background foto nya. Tak hanya kalangan remaja saja, ada pula para pecinta fotografi juga datang kesana untuk hunting foto pemandangan alam yang bagus.</string>
    <string name="wisata9">Umbul Sidomukti merupakan salah satu Kawasan wisata Pegunungan yang sudah sangat terkenal di Semarang, terletak di lereng gunung ungaran dengan ketinggian 1200 dpl, tepatnya berada di Desa Sidomukti, Bandungan - Semarang. Sehingga kawasan wisata ini memiliki pemandangan yang luar biasa terutama dari kolam renang alaminya. </string>
    <string name="wisata10">Goa Rong View merupakan tempat wisata sangat popular di Tntang, Objek wisata ini menawarkan pemandangan alam kabupaten semarang dari ketinggian, Karena itu tidak jarang tempat wisata goa rong disebut dengan nama bukit rong. Tempat wisata ini mengusung konsep yang hampir sama dengan wisata Ketep pass di magelang, hanya saja di goa rong ini lebih sedikit dan sederhana daripada di ketep pass. Tempat wisata ini sendiri berada di ketinggian sekitar 690 Mdpl yang terletak di bagian tengah perkebunan karet. Udara dikawasan wisata goa rong ini terbilang cukup sejuk karena berada di dataran tinggi, ditambah dengan rerimbunnya pepohonan di puncak bukit yang membuat suasan semakin nyaman untuk bersantai. Selain itu di goa rong dapat melihat indahnya matahari terbit yang dapat terlihat diantara gunung merbabu.</string>
    <string name="wisata11">Desa Bejalen disebut juga dengan Kampung Pelangi karena sebagian tembok rumah di desa ini dicat berwarna-warni. Tembok-tembok rumah warga di Desa Bejalen ini memang sangat menarik untuk diabadikan lantaran dicat beraneka warna serta diberi gambar eye catching. Tidak hanya tembok rumah, polisi tidur dan jembatan pun dicat berwarna-warni.</string>
    <string name="wisata12">Gua Maria Kerep adalah sebuah tempat ziarah yang terletak di Jalan Tentara Pelajar, Kelurahan Panjang, Ambarawa. Tempat ini adalah tempat yang cukup baik untuk berdoa, berziarah, dan menyegarkan diri. Jaraknya sekitar 500 m dari Terminal Ambarawa. Karena jauh dari jalan raya, maka daerah ini cukup tenang. Dari tempat ini dapat terlihat pemandangan Gunung Telomoyo, Gunung Merbabu, dan Danau Rawa Pening. Gua Maria Kerep memiliki fasilitas bagi para peziarah, antara lain Jalan Salib, Tempat Doa Lesehan,Gereja, dan sebuah taman.</string>
    <string name="wisata13">Puncak kelir terletak di gunung kelir, yaitu salah satugunung pendek di kabupaten semarang. Gunung kelir adalah salah satu gunung yang memiliki pemandangan yang cukup indah walaupun tidak telalu tinggi.. Gardu pandang puncak ambarwa menawarkan pemandangan alam kabupaten semarang yang sangat indah dapat melihat rawa pening dan beberapa gunung lain seperti merbabu dan Telomoyo. Gardu pandang puncak ambarwa ini berada di ketinggian sekitar 715Mdpl, walaupun tidak terlalu tinggi cukup membantu untuk melihat keindahan alam sekitar.</string>
</resources>
