<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aplikasiwisataambarawa.rawapening">

    <me.biubiubiu.justifytext.library.JustifyTextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bunga"
        android:layout_marginTop="20sp"
        android:text="@string/wisata5"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/bunga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/bunga"
        android:textSize="29sp"
        android:layout_below="@+id/pict4"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="0dp"
        />

    <ImageView
        android:id="@+id/pict4"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:scaleType="fitXY"
        android:src="@drawable/bungacelosia1"
        tools:ignore="contentDescription"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="112dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_bunga"
        android:layout_below="@id/text"
        android:textSize="15sp"
        android:text="@string/lokasi"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="500dp" />
</RelativeLayout>